[gd_scene load_steps=6 format=3 uid="uid://b8us630b85be5"]

[ext_resource type="Texture2D" uid="uid://cnp4nl4hcb5ty" path="res://Sprites/BG.png" id="1_6fbih"]
[ext_resource type="Script" uid="uid://d3bpqa0iebk42" path="res://Scripts/hud.gd" id="1_t1xeu"]
[ext_resource type="LabelSettings" uid="uid://cexoy0bwjny3o" path="res://text_theme.tres" id="2_t1xeu"]
[ext_resource type="Texture2D" uid="uid://2t0nntr5738y" path="res://Sprites/Apple.png" id="3_36asn"]
[ext_resource type="Texture2D" uid="uid://dtlybf4p0beda" path="res://Sprites/MovementNone.png" id="4_8jye8"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 800.0
offset_bottom = 800.0
script = ExtResource("1_t1xeu")

[node name="BorderGroup" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="UpBorder" type="TextureRect" parent="BorderGroup"]
layout_mode = 0
offset_right = 800.0
offset_bottom = 128.0
texture = ExtResource("1_6fbih")

[node name="LeftBorder" type="TextureRect" parent="BorderGroup"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 800.0
texture = ExtResource("1_6fbih")

[node name="RightBorder" type="TextureRect" parent="BorderGroup"]
layout_mode = 0
offset_left = 736.0
offset_right = 800.0
offset_bottom = 800.0
texture = ExtResource("1_6fbih")

[node name="DownBorder" type="TextureRect" parent="BorderGroup"]
layout_mode = 0
offset_top = 736.0
offset_right = 800.0
offset_bottom = 800.0
texture = ExtResource("1_6fbih")

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 62.0
offset_right = 736.0
offset_bottom = 86.0
text = "TIME: 00:00"
label_settings = ExtResource("2_t1xeu")

[node name="TimeTimer" type="Timer" parent="TimeLabel"]
autostart = true

[node name="Score" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 48.0
offset_right = 736.0
offset_bottom = 84.0
alignment = 2

[node name="Apple" type="TextureRect" parent="Score"]
layout_mode = 2
texture = ExtResource("3_36asn")
stretch_mode = 4

[node name="ScoreText" type="Label" parent="Score"]
layout_mode = 2
size_flags_vertical = 8
text = "x0"
label_settings = ExtResource("2_t1xeu")
horizontal_alignment = 2

[node name="InputDisplay" type="TextureRect" parent="."]
modulate = Color(0.415686, 0.631373, 0.537255, 1)
layout_mode = 0
offset_left = 352.0
offset_top = 16.0
offset_right = 448.0
offset_bottom = 112.0
texture = ExtResource("4_8jye8")

[connection signal="timeout" from="TimeLabel/TimeTimer" to="." method="_on_time_timer_timeout"]
